# cnp

./: .gitignore  Cargo.toml  README.md  deploy.sh  generate-lockfiles.sh  tarpaulin-report.html
src/: config.rs  dependency.rs  file_scanner.rs  main.rs  package_manager.rs  report.rs  uninstall.rs  utils.rs
src/tests/: config_tests.rs  dependency_tests.rs  file_scanner_tests.rs  main_tests.rs  mod.rs  uninstall_tests.rs
test_fixtures/: aliased.js  index.js  package-lock-test.json  package.json  pnpm-lock-test.yaml  pnpm-lock.yaml  tsconfig.json  unused.ts  utils.ts
