[package]
name = "cnp"
version = "0.5.5"
authors = ["Alexandre Trotel <trotelalexandre@proton.me>"]
edition = "2021"
description = "A utility tool written in Rust to check unused node packages."
readme = "README.md"
repository = "https://github.com/trotelalexandre/cnp"
license = "MIT"
keywords = ["node", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cnp"
path = "src/main.rs"

[dependencies]
colored = "2.0"
glob = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
comfy-table = "7.1.4"
indicatif = "0.17.11"
serde_yaml = "0.9.34"
